Revision history for XT-Files

{{$NEXT}}

0.002  2019-08-24 21:57:35 UTC

  - XT_FILES_DEFAULT_CONFIG_FILE can be used to specify a different
    default config file

0.001  2019-07-30 20:23:17 UTC

  - Initial release