@@ -45,7 +45,7 @@
             "parent" : "0",
             "perl" : "5.006",
             "strict" : "0",
-            "version" : "0.77",
+            "version" : "0.81",
             "warnings" : "0"
          }
       },
